# vulkan-3dgs-python

./: .gitignore  .gitmodules  README.md  project.toml  pyproject.toml  setup.py
scripts/: test.py
vulkan_3dgs/: __init__.py
